--- a/src/app/myComponates/add-todo/add-todo.component.html
+++ b/src/app/myComponates/add-todo/add-todo.component.html
@@ -1,1 +1,18 @@
-<p>add-todo works!</p>
+<div class="mb-3">
+    <form (ngSubmit)="onSubmit()">
+        <div class="form-group mb-3">
+            <label for="item">Item</label>
+            <input type="text" [(ngModel)]="title" name="title" id="title" class="form-control"
+                placeholder="Enter your title" aria-describedby="helpId">
+
+        </div>
+        <div class="form-group mb-3">
+            <label for="desc">Desc</label>
+            <input type="text" [(ngModel)]="desc" name="desc" id="desc" class="form-control"
+                placeholder="Enter your desc" aria-describedby="helpId">
+        </div>
+       
+            <button type="submit" class="btn btn-sm btn-primary mb-3">Save</button>
+        
+    </form>
+</div>
