--- a/src/app/myComponates/todo/todo.component.html
+++ b/src/app/myComponates/todo/todo.component.html
@@ -1,1 +1,10 @@
-<p>todo works!</p>
+<div class="container fuild">
+<app-add-todo (addTodo)="todoAdd($event)"></app-add-todo>
+</div>
+<div *ngIf="this.todos.length===0; else elseBlock">Todo List is Empty</div>
+
+<ng-template #elseBlock>
+<div  *ngFor="let todo of todos">
+<app-todo-item [todo] = "todo" (todoDelete)="deleteTodo($event)"></app-todo-item>
+</div>
+</ng-template>
