Todo app is ready to use

--- a/src/app/myComponates/todo-item/todo-item.component.html
+++ b/src/app/myComponates/todo-item/todo-item.component.html
@@ -1,12 +1,11 @@
 <div class="my-3">
-    <h3 [ngClass]="{ 'nonstrick' : !todo.active}" >{{todo.title}}</h3>
-    <h5 [ngClass]="{ 'nonstrick' : !todo.active}">{{todo.desc}}</h5>
+    <h3 [ngClass]="{ 'strick' : !todo.active}" >{{todo.title}}</h3>
+    <h5 [ngClass]="{ 'strick' : !todo.active}">{{todo.desc}}</h5>
 
     <div class="form-group form-check">
-        
-        <input class="form-check-input"  (click)="OncheboxClick(todo)" type="checkbox" value="" id="flexCheckDefault">
-        <label class="form-check-label" for="flexCheckDefault"> Done </label>
-       
+        <input class="form-check-input"  (click)="onCheckboxClick(todo)" type="checkbox" value="" id="exampleCheck {{i}}" [checked]="!todo.active">
+        <label class="form-check-label" for="exampleCheck{{i}}">Mark is Done  </label>
     </div>
+
     <button type="button" class="btn btn-sm btn-danger" (click)="OnClick(todo)">Delete</button>
 </div>
