--- a/src/app/myComponates/todo/todo.component.html
+++ b/src/app/myComponates/todo/todo.component.html
@@ -1,10 +1,13 @@
 <div class="container fuild">
+    <h1 class="text-center mb-3">Todo List codewithRam</h1>
+<div class="container fuild">
 <app-add-todo (addTodo)="todoAdd($event)"></app-add-todo>
 </div>
 <div *ngIf="this.todos.length===0; else elseBlock">Todo List is Empty</div>
 
 <ng-template #elseBlock>
-<div  *ngFor="let todo of todos">
-<app-todo-item [todo] = "todo" (todoDelete)="deleteTodo($event)"></app-todo-item>
+<div  *ngFor="let todo of todos; index as i">
+<app-todo-item [todo] = "todo" [i] = "i" (todoDelete)="deleteTodo($event)"  (todoCheckbox)="toggleTodo($event)"></app-todo-item>
 </div>
 </ng-template>
+</div>
